src/test/deca/context/valid/SansObjet/Cast-DeclVar-boolean-booleanVar.deca
// Description:
//    Declaration of a boolean variable using a boolean cast on a boolean variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 14/01/2022 

{
    boolean x =  false ; 
    boolean y =  (boolean) ( x ) ; 
}
