src/test/deca/context/invalid/SansObjet/DeclVar-EQ-string-boolean-boolean.deca
// Description:
//    Declaration of a string variable using == operation between a boolean variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    boolean y = true; 
    string z = false == true; 
}
